# Nimbus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Nimbus.slnx  vcpkg.json
App/: Application.cpp  Application.h  CMakeLists.txt  Win32Window.cpp  Win32Window.h  main.cpp
Core/: CMakeLists.txt
Core/Inc/NimbusCore/: Device.h  GBufferPass.h  pch.h
Core/Src/: Device.cpp  GBufferPass.cpp
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Win32Application.cpp  Win32Application.h  main.cpp
Engine/Editor/: CMakeLists.txt  main.cpp
Engine/Runtime/: CMakeLists.txt  Nimbus.cpp  Nimbus.h
Engine/Runtime/Audio/: Audio.h
Engine/Runtime/Core/Event/: KeyEvent.h
Engine/Runtime/Core/Utils/: LogUtils.h  VectorUtils.h
Engine/Runtime/Event/: Event.h  MouseEvent.h  ResizeEvent.h
Engine/Runtime/Include/: MacOSPlatform.h  module.modulemap
Engine/Runtime/Physics/: Physics.h
Engine/Runtime/Platform/: IInput.h  IWindow.h  Platform.cpp  Platform.h  PlatformContext.cpp  PlatformContext.h
Engine/Runtime/Platform/Input/: GlfwInput.cpp  GlfwInput.h  Input.h
Engine/Runtime/Platform/MacOS/: EventCallbacks.cpp  EventCallbacks.h  MacOSInput.cpp  MacOSInput.h  MacOSWindow.cpp  MacOSWindow.h
Engine/Runtime/Platform/MacOS/Swift/: Platform.swift
Engine/Runtime/Platform/Window/: GlfwWindow.cpp  GlfwWindow.h  IWindow.h
Engine/Runtime/RHI/: IGpuBuffer.h  IRenderDevice.h  Rhi.cpp  Rhi.h  VulkanContext.cpp  VulkanContext.h
Engine/Runtime/RHI/OpenGL/: OpenGLBuffer.h  OpenGlBuffer.cpp  OpenGlRenderDevice.cpp  OpenGlRenderDevice.h
Engine/Runtime/RHI/Vulkan/: VulkanBuffer.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h
Engine/Runtime/Renderer/: Renderer.h
Engine/Runtime/Resources/: Resources.h
Engine/Runtime/Scene/: Scene.h
Engine/Runtime/Scripting/: Scripting.h
Engine/Runtime/UI/: UI.h
RHI/: CMakeLists.txt
RHI/Inc/NimbusRHI/: Buffer.h  CommandList.h  DescriptorHandle.h  Device.h  Resource.h  Texture.h
RenderGraph/: CMakeLists.txt
RenderGraph/Inc/NimbusRenderGraph/: RenderGraph.h  RenderGraphResource.h  RenderPass.h  RenderPassBuilder.h
RenderGraph/Src/: RenderGraph.cpp
Runtime/: Runtime.vcxproj
Sandbox/: CMakeLists.txt  main.cpp
Shaders/: test.slang
Source/: Application.cpp  Application.h  main.cpp
Source/Platform/: Window.cpp  Window.h
Source/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderPassNode.cpp  RenderPassNode.h  RenderResource.h
Source/Rendering/: LogicalDeviceBuilder.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  VulkanInstanceBuilder.h
Source/Rendering/RenderPasses/: SimplePass.cpp  SimplePass.h
Source/Utils/: ArgParser.h  LogicalDeviceBuilder.h  PhysicalDeviceSelector.h  SwapchainManager.h  VulkanInstanceBuilder.h
cmake/: CompileSlangShader.cmake
